@@ -32,6 +32,8 @@ FIXES
 * Fix for extra field header in availability CSV export (bug #113)
 * Fix for macro processing code modifying input string (Jochen Bern)
 * Fix for update check API
+* Fix for CGI speedup when persistent=0 for comments
+* Fix for event execution loop re-scheduling host checks instead of executing them if service checks are disabled (bug #152)
 
 WARNINGS
 
